change query method from sentiments to topics

--- a/DataVisualization/src/main/resources/com/lagunex/app/main.fxml
+++ b/DataVisualization/src/main/resources/com/lagunex/app/main.fxml
@@ -13,8 +13,8 @@
         <tabs>
           <Tab text="%chart.aggregate.pie" />
           <Tab text="%chart.aggregate.histogram" />
-            <Tab text="%chart.sentiment.pie" />
-            <Tab text="%chart.sentiment.histogram" />
+            <Tab text="%chart.topic.pie" />
+            <Tab text="%chart.topic.histogram" />
         </tabs>
       </TabPane>
    </center>
